# stodem

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  GLYPH_DESIGN.md  GLYPH_TODO.md  README.md  TODO.md
.stodem/: stodemrc  stodemrc.py
dev/: ARCHITECTURE.md  DESIGN.md  PSEUDOCODE.md  TODO.md  VISION.md
jobs/test1/: command
src/: CMakeLists.txt
src/scripts/: CMakeLists.txt  citizen.py  diagnostics.py  gaussian.py  government.py  output.py  patch.py  policy_space_viz.py  politician.py  random_state.py  settings.py  sim_control.py  stodem.in.xml  stodem.py  world.py  zone.py
